@@ -3,6 +3,8 @@ CHANGES.txt - OpenPrinting CUPS Filters v1.0b1 - 2011-01-30
 
 CHANGES IN V1.0b2
 
+	- Install C header files and the static library
+	- General clean-up of "make install" targets in Makefiles
 	- Raised MIME conversion cost factor of pdftoraster from 66 to 100 to
 	  give priority to the gstoraster filter from Ghostscript, as this
 	  filter supports ICC-profile-based color management.
